feat(demo): 隐藏活动栏中的菜单栏、标签列表和工具栏，调整编辑器高度以适应布局，提升用户界面体验

--- a/demo-npm/src/style.css
+++ b/demo-npm/src/style.css
@@ -20,7 +20,8 @@ body {
 #editors {
   position: relative;
   min-width: 0;
-  height: 45vh;
+  /* height: 45vh; */
+  height: 100%;
   border: 1px solid var(--vscode-editorWidget-border);
 }
 
